# kaatio-planvalidator

./: .dockerignore  .gitignore  README.md  cdk.context.json  cdk.json  docker-compose.yml  main.py  pyproject.toml  run_server.py  setup.cfg  virallinenKaatio.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dependabot.yml
cdk/: app.py
cdk/stacks/: __init__.py  infra.py
docker/gunicorn/: Dockerfile
docker/nginx/: Dockerfile
docker/nginx/templates/: default.conf.template
docs/: memo.md  project-base.md
kaatio_plan_validator/: main.py
kaatio_plan_validator/api_v1/: __init__.py  constants.py  exception_handlers.py  exceptions.py  models.py  ogc.py  router.py  routes.py  utils.py  validators.py
kaatio_plan_validator/api_v1/models/: __init__.py  common.py  feature_collection_verifier.py  feature_member.py  land_use_feature_collection.py  participation_and_evaluation_plan.py  plan_object.py  plan_order.py  plan_order_group.py  plan_recommendation.py  planner.py  spatial_plan.py
kaatio_plan_validator/api_v1/schemas/: extdEncRule.xsd  land-use-decision-core-1.2.xsd  spatialplan-1.2.xsd  xlink.xsd
kaatio_plan_validator/api_v1/schemas/gco/: basicTypes.xsd
kaatio_plan_validator/api_v1/schemas/gmd/: applicationSchema.xsd  citation.xsd  dataQuality.xsd  distribution.xsd  extent.xsd  freeText.xsd  gmd.xsd  metadataApplication.xsd  metadataEntity.xsd  metadataExtension.xsd  referenceSystem.xsd  spatialRepresentation.xsd
kaatio_plan_validator/api_v1/schemas/gml/: basicTypes.xsd  coordinateOperations.xsd  coordinateReferenceSystems.xsd  coordinateSystems.xsd  coverage.xsd  datums.xsd  deprecatedTypes.xsd  dynamicFeature.xsd  feature.xsd  geometryAggregates.xsd  geometryBasic2d.xsd  geometryComplexes.xsd  gmlBase.xsd  grids.xsd  measures.xsd  observation.xsd  temporal.xsd  temporalReferenceSystems.xsd  temporalTopology.xsd  units.xsd  valueObjects.xsd
kaatio_plan_validator/api_v1/schemas/gsr/: gsr.xsd
kaatio_plan_validator/api_v1/schemas/gss/: geometry.xsd  gss.xsd
kaatio_plan_validator/api_v1/schemas/gts/: gts.xsd  temporalObjects.xsd
schema/: land-use-decision-core-1.2.xsd  localization-1.0.xsd  spatialplan-1.2.xsd
schema/gco/: gco.xsd  gcoBase.xsd
schema/gmd/: constraints.xsd  content.xsd  identification.xsd  maintenance.xsd  portrayalCatalogue.xsd
schema/gml/: dictionary.xsd  direction.xsd  geometryBasic0d1d.xsd  geometryPrimitives.xsd  gml.xsd  referenceSystems.xsd  topology.xsd
schema/gsr/: spatialReferencing.xsd
tests/: conftest.py  test_api_v1_models.py  test_api_v1_rest.py  test_api_v1_verifiers.py  test_ogr.py
tests/data/: spatialPlan-collection-simple.xml  spatialPlan-collection-with-group-inlined.xml  spatialPlan-collection-with-group.xml  virallinen_kaatio_broken.xml  virallinen_kaatio_geom-curve-with-arc-segment.xml  virallinen_kaatio_geom-curve-with-arcbycenterpoint-segment.xml  virallinen_kaatio_geom-curve-with-arcstring-segment.xml  virallinen_kaatio_geom-curve-with-linestringsegment.xml  virallinen_kaatio_geom-solid-with-polygon-surfaces.xml  virallinen_kaatio_invalid.xml  virallinen_kaatio_invalid_no_feature_members.xml  virallinen_kaatio_invalid_plan_object_unkown_spatialplan.xml  virallinen_kaatio_valid_1.xml  virallinen_kaatio_valid_2.xml
