[tool.poetry]
name = "kaatio_plan_validator"
version = "0.1.0"
description = "KAATIO Plan Validator"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.6"
email-validator = "^2.1.1"
fastapi = {extras = ["all"], version = "^0.110.0"}
gunicorn = "^21.2.0"
lxml = "^5.1.0"
python-multipart = "^0.0.9"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
xmlschema = "^3.0.2"
GDAL = "3.2.2.1"

[tool.poetry.dev-dependencies]
aws-cdk-lib = "^2.131.0"
black = "^24.2.0"
constructs = ">=10.0.0, <11.0.0"
exceptiongroup = "^1.2.0"
flake8 = "^7.0.0"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.2.6"
flake8-comprehensions = "^3.14.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-fixme = "^1.1.1"
flake8-isort = "^6.1.1"
flake8-print = "^5.0.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.21.0"
flake8-use-pathlib = "^0.3.0"
isort = "^5.13.2"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
