[tool.poetry]
name = "kaatio_plan_validator"
version = "0.1.0"
description = "KAATIO Plan Validator"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.6"
email-validator = "^2.3.0"
fastapi = {extras = ["all"], version = "^0.121.3"}
gunicorn = "^23.0.0"
lxml = "^6.0.2"
python-multipart = "^0.0.20"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
xmlschema = "^4.2.0"
GDAL = "3.2.2.1"

[tool.poetry.dev-dependencies]
aws-cdk-lib = "^2.222.0"
black = "^25.11.0"
constructs = ">=10.0.0, <11.0.0"
exceptiongroup = "^1.3.1"
flake8 = "^7.3.0"
flake8-black = "^0.4.0"
flake8-bugbear = "^25.10.21"
flake8-comprehensions = "^3.17.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-fixme = "^1.1.1"
flake8-isort = "^7.0.0"
flake8-print = "^5.0.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.22.0"
flake8-use-pathlib = "^0.3.0"
isort = "^7.0.0"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
